--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,11 +9,7 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceFolder}/main.go",
-      "args": [
-        "-secretKey=5KupBk1jYe3DZLB9tLYBvQ==",
-        "-targetAddress=http://10.20.20.9:15914"
-      ]
+      "program": "${workspaceFolder}/main.go"
     }
   ]
 }
