feat: improve readme

--- a/copy_example.yaml
+++ b/copy_example.yaml
@@ -5,11 +5,10 @@ mqtt:
   password: password
 
 devices:
-  - bedroom:
-    name: Bedroom AC
+  - name: Bedroom AC
     unique_id: bedroomac
     address: http://192.168.0.15:15914
-    secret_key: 4QupBk1jYe3DZLB9tLYBvQ==
+    secret_key: 4upBk1jYe3DZLB9tLYBvQ==
     operation_modes:
       - auto
       - off
@@ -19,8 +18,7 @@ devices:
       - low
       - high
 
-  - escritorio:
-    name: Escritório
+  - name: Escritório
     unique_id: daikinescritorio01
     address: http://10.20.20.10:15914
     secret_key: 5KupBk1jYe3DZLB9tLYBvQ==
